# sutram

./: 404.html  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
api-reference/: index.html
caching/: index.html
docs/: api-reference.md  caching.md  index.md  llms.txt  providers.md  quickstart.md  retry.md  sessions.md
providers/: index.html
quickstart/: index.html
retry/: index.html
search/: search_index.json
sessions/: index.html
sutram/: __init__.py  base.py  cache.py  config.py  registry.py  response.py  session.py  tools.py
sutram/providers/: __init__.py  openai_compat.py  openrouter.py
