[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sutram"
version = "0.1.1"
description = "A lightweight Python library for calling LLMs through a unified interface with built-in caching, retry policies, and session management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "python-dotenv>=1.2.2",
]
